suggdata only depends on db wip