@@ -1,13 +1,17 @@
 package fr.gouv.monprojetsup.suggestions.data;
 
-import fr.gouv.monprojetsup.suggestions.domain.entity.Edge;
-import fr.gouv.monprojetsup.suggestions.data.model.formations.Formation;
-import fr.gouv.monprojetsup.suggestions.data.model.stats.PsupStatistiques;
-import fr.gouv.monprojetsup.suggestions.data.model.stats.Statistique;
+import fr.gouv.monprojetsup.suggestions.data.model.cities.Coords;
+import fr.gouv.monprojetsup.suggestions.data.model.stats.Middle50;
+import fr.gouv.monprojetsup.suggestions.data.model.stats.StatFront;
 import fr.gouv.monprojetsup.suggestions.data.model.stats.StatsContainers;
-import fr.gouv.monprojetsup.suggestions.data.update.psup.FormationsSimilaires;
+import fr.gouv.monprojetsup.suggestions.domain.entity.Edge;
+import fr.gouv.monprojetsup.suggestions.domain.entity.Formation;
+import fr.gouv.monprojetsup.suggestions.domain.entity.Matiere;
+import fr.gouv.monprojetsup.suggestions.domain.entity.StatsFormation;
 import fr.gouv.monprojetsup.suggestions.domain.port.EdgesPort;
+import fr.gouv.monprojetsup.suggestions.domain.port.FormationsPort;
 import fr.gouv.monprojetsup.suggestions.domain.port.LabelsPort;
+import fr.gouv.monprojetsup.suggestions.domain.port.MatieresPort;
 import jakarta.annotation.PostConstruct;
 import lombok.val;
 import org.apache.commons.lang3.tuple.Pair;
@@ -19,41 +23,37 @@ import org.springframework.stereotype.Component;
 import java.util.*;
 import java.util.stream.Collectors;
 
-import static fr.gouv.monprojetsup.suggestions.data.Constants.FORMATION_PREFIX;
 import static fr.gouv.monprojetsup.suggestions.data.Constants.PASS_FL_COD;
+import static fr.gouv.monprojetsup.suggestions.data.model.stats.PsupStatistiques.MOYENNE_GENERALE_CODE;
+import static fr.gouv.monprojetsup.suggestions.data.model.stats.PsupStatistiques.TOUS_BACS_CODE;
+import static fr.gouv.monprojetsup.suggestions.data.model.stats.StatFront.getStatistique;
 
 @Component
 public class SuggestionsData {
 
+    private static final int DUREE_DEFAULT_VALUE = 3;
     private final EdgesPort edgesPort;
     private final LabelsPort labelsPort;
+    private final FormationsPort formationsPort;
+
+    private final MatieresPort matieresPort;
 
     @Autowired
     public SuggestionsData(
             EdgesPort edgesPort,
-            LabelsPort labelsPort) {
+            LabelsPort labelsPort,
+            FormationsPort formationsPort,
+            MatieresPort matieresPort
+            ) {
         this.edgesPort = edgesPort;
         this.labelsPort = labelsPort;
+        this.formationsPort = formationsPort;
+        this.matieresPort = matieresPort;
     }
 
-    private PsupStatistiques statistiques;
-    private FormationsSimilaires filieresSimilaires;
-    private final Map<String,List<Formation>> formations = new HashMap<>();
-    private final Map<String,Integer> capacities = new HashMap<>();
-    private final Map<String,Integer> durees = new HashMap<>();
-    private final Map<String,Set<String>> candidatesMetiers = new HashMap<>();
-
-    private final Map<String, Set<String>> liensSecteursMetiers = new HashMap<>();
-
-    private Set<String> lasFilieres = new HashSet<>();
-    private Map<Integer, String> specialites;
-    private Set<String> bacsWithSpecialite;
-    private Set<String> apprentissage;
 
     @PostConstruct
     private void load() {
-        //load stats
-        this.statistiques = new PsupStatistiques();
 
         //load filieresFront
 
@@ -88,8 +88,6 @@ public class SuggestionsData {
         //        */
         //        //should include groups
 
-        //init caapcities
-        formations.forEach((key, value) -> capacities.put(key, value.stream().mapToInt(f -> f.capacite).sum()));
 
         //        throw new NotImplementedException("Not implemented yet");
 
@@ -167,52 +165,87 @@ public class SuggestionsData {
         return keys.stream().flatMap(key -> edgesPort.getOutgoingEdges(key).stream()).toList();
     }
 
-    public @NotNull Map<String, Integer> getFilieresSimilaires(String fl, int i) {
-        return filieresSimilaires.get(fl,i);
+    public @NotNull Map<String, Integer> getFormationsSimilaires(String formationId, int typeBac) {
+        val f = formationsPort.retrieveFormation(formationId).orElse(null);
+        if(f == null) return Map.of();
+        return f.stats().formationsSimilaires().getOrDefault(typeBac, Map.of());
     }
 
-    public @NotNull List<Formation> getFormations(String key) {
-        return formations.getOrDefault(key, Collections.emptyList());
+    public @NotNull List<String> getVoeuxIds(String formationId) {
+        val f = formationsPort.retrieveFormation(formationId).orElse(null);
+        if(f == null) return List.of();
+        return f.getVoeuxIds();
     }
 
-    public Integer getNbAdmis(String grp, String code) {
-        return statistiques.getNbAdmis(grp, code);
+    public List<Pair<String, Coords>> getVoeuxCoords(String id) {
+        val f = formationsPort.retrieveFormation(id).orElse(null);
+        if(f == null) return List.of();
+        return f.getVoeuxCoords();
     }
 
-    public int getDuree(String fl) {
-        return durees.getOrDefault(fl, 3);
+
+
+    public @Nullable Integer getNbAdmis(String formationId, String bac) {
+        return formationsPort.retrieveFormation(formationId)
+                .map(f -> f.stats().nbAdmis().getOrDefault(bac, null))
+                .orElse(null);
     }
 
-    public Pair<String, Statistique> getStatsBac(String fl, String bac) {
-        return statistiques.getStatsBac(fl, bac);
+    public int getDuree(String formationId) {
+        val f = formationsPort.retrieveFormation(formationId);
+        return f.map(Formation::duree).orElse(DUREE_DEFAULT_VALUE);
     }
 
-    public Double getStatsSpecialite(String fl, Integer iMtCod) {
-        return statistiques.getStatsSpecialite(fl, iMtCod);
+    public @Nullable Pair<String, Middle50> getStatsBac(String formationId, String bac) {
+        val f = formationsPort.retrieveFormation(formationId);
+        if(f.isEmpty()) return null;
+        val stats = f.get().stats().admissions();
+        if(stats.containsKey(bac)) {
+            return Pair.of(bac, stats.get(bac).middle50());
+        }
+        if(stats.containsKey(TOUS_BACS_CODE)) {
+            return Pair.of(TOUS_BACS_CODE, stats.get(TOUS_BACS_CODE).middle50());
+        }
+        return null;
     }
 
-    public Set<String> getAllCandidatesMetiers(String key) {
-        return candidatesMetiers.getOrDefault(key, Collections.emptySet());
+    public @Nullable Double getStatsSpecialite(String formationId, Integer iMtCod) {
+        return formationsPort.retrieveFormation(formationId)
+                .map(f -> f.stats().specialites().getOrDefault(iMtCod, null))
+                .orElse(null);
     }
 
-    public int getNbFormations(String fl) {
-        return formations.getOrDefault(fl, Collections.emptyList()).size();
+    public Set<String> getAllCandidatesMetiers(String formationID) {
+        val f = formationsPort.retrieveFormation(formationID);
+        return f.map(formation -> formation.metiers().stream().collect(Collectors.toSet())).orElse(Collections.emptySet());
     }
 
-    public int getCapacity(String fl) {
-        return capacities.getOrDefault(fl, 0);
+    public int getNbVoeux(String formationId) {
+        val f = formationsPort.retrieveFormation(formationId);
+        return f.map(Formation::nbVoeux).orElse(0);
+    }
+
+    public int getCapacity(@NotNull String formationId) {
+        val f = formationsPort.retrieveFormation(formationId);
+        return f.map(Formation::capacite).orElse(0);
     }
 
     public Map<Integer, String> getSpecialites() {
-        return Collections.unmodifiableMap(specialites);
+        return matieresPort.retrieveSpecialites().stream().collect(Collectors.toMap(Matiere::id, Matiere::label));
     }
 
-    public Set<String> getApprentissage() {
-       return Collections.unmodifiableSet(apprentissage);
+    public Set<String> getFormationIdsWithApprentissage() {
+        return formationsPort.retrieveFormations().values().stream()
+                .filter(Formation::apprentissage)
+                .map(Formation::id)
+                .collect(Collectors.toSet());
     }
 
-    public Set<String> getBacsWithSpecialite() {
-        return Collections.unmodifiableSet(bacsWithSpecialite);
+    public Set<String> getBacsWithAtLeastTwoSpecialites() {
+        Map<String, Integer> nbSpecialitesParBack = matieresPort.retrieveSpecialites().stream()
+                .flatMap(m -> m.bacs().stream())
+                .collect(Collectors.groupingBy(b -> b, Collectors.summingInt(b -> 1)));
+        return nbSpecialitesParBack.entrySet().stream().filter(e -> e.getValue() > 1).map(Map.Entry::getKey).collect(Collectors.toSet());
     }
 
 
@@ -220,35 +253,70 @@ public class SuggestionsData {
      * utilisé pour l'envoi des stats aux élèves
      *
      * @param bac le bac
-     * @param g le groupe
+     * @param formationId le groupe
      * @return les détails
      */
-    public @NotNull StatsContainers.SimpleStatGroupParBac getSimpleGroupStats(@Nullable String bac, String g) {
-        if(bac == null) bac = PsupStatistiques.TOUS_BACS_CODE;
-        return new StatsContainers.SimpleStatGroupParBac(
-                statistiques.getGroupStats(
-                        g,
-                        bac,
-                        true
-                )
-        );
+    public @NotNull StatsContainers.SimpleStatGroupParBac getSimpleGroupStats(@Nullable String bac, String formationId) {
+        if(bac == null) bac = TOUS_BACS_CODE;
+        val f = formationsPort.retrieveFormation(formationId);
+        if(f.isEmpty()) return new StatsContainers.SimpleStatGroupParBac(Map.of());
+        val stats = f.get().stats();
+
+        val statsTousBacs = getSimpleStatGroup(formationId, stats, TOUS_BACS_CODE);
+        val statsBacs = getSimpleStatGroup(formationId, stats, bac);
+
+        Map<String, StatsContainers.SimpleStatGroup> statsMap = new HashMap<>();
+        if(statsTousBacs != null) statsMap.put(TOUS_BACS_CODE, statsTousBacs);
+        if(statsBacs != null) statsMap.put(bac, statsBacs);
+        return new StatsContainers.SimpleStatGroupParBac(statsMap);
     }
 
+    private static @Nullable StatsContainers.SimpleStatGroup getSimpleStatGroup(String formationId, StatsFormation stats, String bac) {
+        if(stats.admissions().containsKey(bac)) {
+            Map<Integer, StatFront> statsScol = new HashMap<>();
 
+            val nbAdmis = stats.nbAdmis().get(bac);
+            if(nbAdmis == null) return null;
+
+            val frequencesCumulees = stats.admissions().get(bac).frequencesCumulees();
+            if(frequencesCumulees == null) return null;
+
+            val stat = getStatistique(frequencesCumulees, true);
+
+            Map<Integer, Integer> statsSpecs = stats.specialites().entrySet().stream()
+                    .map(e -> Pair.of(e.getKey(), (int)(100 * e.getValue())))
+                    .collect(Collectors.toMap(Pair::getLeft, Pair::getRight));
+
+            return new StatsContainers.SimpleStatGroup(
+                    formationId,
+                    nbAdmis,
+                    statsSpecs,
+                    Map.of(MOYENNE_GENERALE_CODE, stat)
+            );
+        }
+        return null;
+    }
 
 
     public Map<String,String> getFormationToFilieres() {
+        val formations = formationsPort.retrieveFormations();
         Map<String,String> result = new HashMap<>();
-        formations.forEach((key, value) -> value.forEach(f -> result.put(FORMATION_PREFIX + f.gTaCod, key)));
+        formations.values().forEach(f -> f.voeux().forEach(v -> result.put(v.id(), f.id())));
         return result;
     }
 
-    public Set<String> getLASFilieres() {
-        return lasFilieres;
+    public Set<String> getLASFormations() {
+        return formationsPort.retrieveFormations().entrySet()
+                .stream()
+                .filter(e -> e.getValue().las() != null)
+                .map(Map.Entry::getKey)
+                .collect(Collectors.toSet());
     }
 
     public Map<String, Set<String>> getMetiersVersFormations() {
-        return Map.of();
+        return formationsPort.retrieveFormations().entrySet().stream()
+                .flatMap(e -> e.getValue().metiers().stream().map(m -> Pair.of(m, e.getKey())))
+                .collect(Collectors.groupingBy(Pair::getLeft, Collectors.mapping(Pair::getRight, Collectors.toSet())));
     }
 
     public Set<String> getMetiersPass() {
@@ -261,7 +329,9 @@ public class SuggestionsData {
     }
 
     public Map<String,String> getLasToGeneric() {
-        return Map.of();
+        return formationsPort.retrieveFormations().values().stream()
+                .filter(f -> f.las() != null)
+                .collect(Collectors.toMap(Formation::las, Formation::id));
     }
 
     public List<Edge> edgesInteretsMetiers() {
@@ -295,4 +365,5 @@ public class SuggestionsData {
     public List<Edge> lasToPass() {
         return edgesPort.getEdgesLasToPass();
     }
+
 }
